# AIAgents3997-HW4

./: .env.example  .git-workflow-state.json  .gitignore  API_SETUP.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRD.md  README.md  pyproject.toml  requirements.txt  tour_guide.py
.github/workflows/: ci.yml
docs/: Architecture.md  CONFIG.md  COSTS.md  EXAMPLE_RUN.md  EXPECTED_RESULTS.md  EXTENSIBILITY.md  SECURITY.md  UI.md  UI_UX_REVIEW.md
docs/ADRs/: 001-threading-over-multiprocessing.md  002-priority-queue-scheduling.md  003-wikipedia-fallback-strategy.md  004-interactive-cli.md
docs/development/: FINAL_CHECKLIST.md  PROMPT_LOG.md  QUALITY_STANDARD.md
examples/: example_agents.py  example_route.py
notebooks/: research_results.ipynb
research/: RESEARCH.md  literature.md
research/experiments/: generate_route_map.py  judge_analysis.py
results/: README.md
results/metrics/: baseline_metrics.json  relevance_sensitivity.json  type_preference_sensitivity.json
src/: __init__.py  orchestrator.py
src/agents/: __init__.py  base_agent.py  judge_agent.py  spotify_agent.py  text_agent.py  youtube_agent.py
src/api/: __init__.py  google_maps.py
src/models/: __init__.py  agent_result.py  point.py
tests/: __init__.py  test_google_maps.py  test_judge_agent.py  test_spotify_agent.py  test_text_agent.py  test_youtube_agent.py
